--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="index.manifest">
   <head>
     <meta charset="utf-8"/>
     <meta name="description" content="MiniPoject, MoodChat"/>
